syntax = "proto3";

package common;

option go_package = "commonpb";

message GetRequest {
	string key = 1;
}

message GetResponse {
	string value = 1;
}

message SetRequest {
	string key = 1;
	string value = 2;
}

message SetResponse {}
